examples/kubernetes/k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: terraform-registry
  labels:
    name: terraform-registry
    istio-injection: enabled
